--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.6",
     "sass": "^1.75.0"
   },
   "devDependencies": {
